[gd_scene load_steps=4 format=3 uid="uid://bac3jnsksju3k"]

[ext_resource type="Script" path="res://assets/ui/hit_point_display/hit_point_display.gd" id="1_u7ahb"]
[ext_resource type="Texture2D" uid="uid://umj63g5672rk" path="res://assets/ui/hit_point_display/hp.png" id="2_j18am"]
[ext_resource type="Texture2D" uid="uid://d1ri0n84ebqs" path="res://assets/ui/hit_point_display/hp_empty.png" id="3_2ofpy"]

[node name="hit_point_display" type="MarginContainer"]
custom_minimum_size = Vector2(28, 28)
script = ExtResource("1_u7ahb")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="hp_template" type="TextureRect" parent="Control"]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_right = 28.0
offset_bottom = 28.0
pivot_offset = Vector2(14, 14)
texture = ExtResource("2_j18am")
expand_mode = 1
stretch_mode = 5

[node name="hp_empty_template" type="TextureRect" parent="Control"]
visible = false
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
offset_right = 28.0
offset_bottom = 28.0
pivot_offset = Vector2(14, 14)
texture = ExtResource("3_2ofpy")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="hp_row" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="hp_empty_row" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
